<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:background="@color/clr_back_full" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingBottom="18dp"
		android:background="@color/clr_details_back" >
			
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="22dp"
			android:layout_gravity="center"
			android:text="@string/details_caption"
			android:textSize="17sp"
			android:textColor="@color/clr_white_full" >
		</TextView>
		 	
		<TextView
			android:id="@+id/tvId"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="18dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:text="@string/id"
			android:textSize="14sp"
			android:textColor="@color/clr_white_full"
			android:singleLine="true" >
		</TextView>
			 	
		<TextView
			android:id="@+id/tvType"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="7dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:text="@string/type"
			android:textSize="14sp"
			android:textColor="@color/clr_white_full"
			android:singleLine="true" >
		</TextView>
		
		<TextView
			android:id="@+id/tvCreated"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="7dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:text="@string/created"
			android:textSize="14sp"
			android:textColor="@color/clr_white_full"
			android:singleLine="true" >
		</TextView>
	 	
		<TextView
			android:id="@+id/tvLikes"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="7dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:text="@string/liked"
			android:textSize="14sp"
			android:textColor="@color/clr_white_full"
			android:singleLine="true" >
		</TextView>
		
		<TextView
			android:id="@+id/tvComments"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="7dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:text="@string/commented"
			android:textSize="14sp"
			android:textColor="@color/clr_white_full"
			android:singleLine="true" >
		</TextView>
		
		<TextView
			android:id="@+id/tvTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="7dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:text="@string/title"
			android:textSize="14sp"
			android:textColor="@color/clr_white_full" >
		</TextView>
	
	</LinearLayout>
								
</ScrollView>